--- a/src/main/resources/templates/eventos.html
+++ b/src/main/resources/templates/eventos.html
@@ -12,8 +12,8 @@
 
 <header>
     <nav class="navbar navbar-light bg-light">
-        <span class="navbar-brand mb-0 h1" style="font-weight: bold;">IEAD</span>
-        <a href="/newpost" class="btn btn-primary" role="button">Novo Evento</a>
+        <a href="/"><span class="navbar-brand mb-0 h1" style="font-weight: bold;">IEAD</span></a>
+        <a href="/novoevento" class="btn btn-primary" role="button">Novo Evento</a>
     </nav>
 </header>
 
@@ -21,6 +21,7 @@
     <div class="container"  style="width: 60%; padding-bottom: 30px;">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb" style="background-color: white; padding-left: 0px;">
+                <li class="breadcrumb-item " aria-current="page"><a href="/">Inicio</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Eventos</li>
             </ol>
         </nav>
