Corrigido forms permitindo anonimato

--- a/src/main/resources/templates/eventoForm.html
+++ b/src/main/resources/templates/eventoForm.html
@@ -109,12 +109,11 @@
         <duv>
             <form method="post">
                 <div class="form-group">
-                    <input type="text" class="form-control" name="nomeColaborador" placeholder="Nome do Colaborador:"
-                           required>
+                    <input type="text" class="form-control" name="nomeColaborador" placeholder="Nome do Colaborador:">
                 </div>
 
                 <div class="form-group">
-                    <input type="text" class="form-control" name="cracha" placeholder="Crachá:" required>
+                    <input type="text" class="form-control" name="cracha" placeholder="Crachá:">
                 </div>
 
 
