--- a/src/main/resources/templates/eventos.html
+++ b/src/main/resources/templates/eventos.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org">
 <head>
-    <title>Blog</title>
+    <title>iEAD</title>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!--<link rel="stylesheet" href="style/styleCss.css"/>-->
+
+
 </head>
 <body>
 
@@ -25,20 +27,20 @@
                 <li class="breadcrumb-item active" aria-current="page">Eventos</li>
             </ol>
         </nav>
-        <div class="card shadow-sm bg-white rounded" style="margin-top: 20px;" th:each="evento : ${eventos}">
-            <div class="card-body">
-                <p class="card-subtitle mb-2 text-muted" style="font-size: 0.8rem;">
-                    <span th:text="${evento.resolvido}" th:class="${evento.resolvido == 'Verificado'} ? 'text-success' : (${evento.resolvido == 'Não Verificado'} ? 'text-danger' : 'text-warning')"></span>
-                    <span>/</span>
-                    <span th:text="${evento.setorOcorrencia}"></span>
-                    <span>/</span>
-                    <span th:text="${evento.data}"></span>
-                </p>
+        <div class="card-container">
+            <div class="card shadow-sm bg-white rounded" style="margin-top: 20px; width: 80%; margin-left:auto; margin-right:auto;" th:each="evento : ${eventos}">
+                <div class="card-body">
+                    <p class="card-subtitle mb-2 text-muted" style="font-size: 0.8rem;">
+                        <span th:text="${evento.resolvido}" th:class="${evento.resolvido == 'Verificado'} ? 'text-success' : (${evento.resolvido == 'Não Verificado'} ? 'text-danger' : 'text-warning')"></span>
+                        <span>/</span>
+                        <span th:text="${evento.setorOcorrencia}"></span>
+                        <span>/</span>
+                        <span th:text="${evento.data}"></span>
+                    </p>
 
-                <!---->
-                <a th:href="@{~/eventos/{id}(id=${evento.id})}"><h4 class="card-title" style="font-weight: bold; color: black; padding-top: 5px;"><span th:text="${evento.classificacao}"></span></h4></a>
-                <p class="card-text"><span th:utext="${#strings.abbreviate(evento.descricaoEvento,200)} "></span></p>
-                <!--<a th:href="${(#mvc.url('BC#getPostDetails').arg(0, post.id)).build()}" class="card-link">Acessar</a>-->
+                    <a th:href="@{~/eventos/{id}(id=${evento.id})}" class="text-decoration-none"><h4 class="card-title fw-bold" style="color: black; padding-top: 5px;"><span th:text="${evento.classificacao}"></span></h4></a>
+                    <p class="card-text"><span th:utext="${#strings.abbreviate(evento.descricaoEvento,200)}"></span></p>
+                </div>
             </div>
         </div>
     </div>
