--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org">
 <head>
-  <title>Blog</title>
+  <title>iEAD</title>
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
   <!-- Bootstrap CSS -->
@@ -19,11 +19,11 @@
     </div>
   </nav>
 
-  <div class="container" style="padding-top: 50px">
+  <div class="container" style="width: 40%; padding-top: 50px;">
     <table class="table">
       <thead class="thead-dark">
       <tr>
-        <th scope="col">Classificação</th>
+        <th scope="col">Status</th>
         <th scope="col">Quantidade</th>
       </tr>
       </thead>
@@ -36,9 +36,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <script>
-<!--    Função para buscar os dados do endpoint /CountByClassification-->
+<!--    Função para buscar os dados do endpoint /resolvidos-->
         function fetchClassificationData() {
-            fetch('/CountByClassification')
+            fetch('/resolvidos')
                 .then(response => response.json())
                 .then(data => populateTable(data))
                 .catch(error => console.error(error));
