--- a/src/main/resources/templates/eventos.html
+++ b/src/main/resources/templates/eventos.html
@@ -6,7 +6,28 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!--<link rel="stylesheet" href="style/styleCss.css"/>-->
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Papaparse -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
+
+    <script>
+  $(document).ready(function() {
+    $("#btnDownload").click(function() {
+      $.get("/eventosJs", function(data) {
+        const csv = Papa.unparse(data);
+        const blob = new Blob([csv], { type: "text/csv" });
+        const url = URL.createObjectURL(blob);
+        const a = document.createElement("a");
+        a.href = url;
+        a.download = "eventos.csv";
+        document.body.appendChild(a);
+        a.click();
+        document.body.removeChild(a);
+      });
+    });
+  });
+</script>
 
 
 </head>
@@ -19,16 +40,21 @@
     </nav>
 </header>
 
+
+
+
 <section>
     <div class="container"  style="width: 60%; padding-bottom: 30px;">
+
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb" style="background-color: white; padding-left: 0px;">
                 <li class="breadcrumb-item " aria-current="page"><a href="/">Inicio</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Eventos</li>
             </ol>
         </nav>
+        <button id="btnDownload" class="btn btn-primary">Baixar Planilha CSV</button>
         <div class="card-container">
-            <div class="card shadow-sm bg-white rounded" style="margin-top: 20px; width: 80%; margin-left:auto; margin-right:auto;" th:each="evento : ${eventos}">
+            <div class="card shadow-sm bg-white rounded" style="margin-top: 20px; margin-left:auto; margin-right:auto;" th:each="evento : ${eventos}">
                 <div class="card-body">
                     <p class="card-subtitle mb-2 text-muted" style="font-size: 0.8rem;">
                         <span th:text="${evento.resolvido}" th:class="${evento.resolvido == 'Verificado'} ? 'text-success' : (${evento.resolvido == 'Não Verificado'} ? 'text-danger' : 'text-warning')"></span>
