- Adicionado grafico para controle por data junto ao endpoint /eventosPorData - Realizado melhorias no HTML

--- a/src/main/resources/templates/eventoDetails.html
+++ b/src/main/resources/templates/eventoDetails.html
@@ -70,6 +70,7 @@
                 <span th:text="${evento.data}"></span>
             </p>
             <p><strong>Crachá:</strong> <span th:text="${evento.cracha}"></span></p>
+            <p><strong>Cédigo do Evento:</strong>  Evn#<span th:text="${evento.id}"></span></p>
             <p><strong>Evento Relacionado ao Paciente:</strong> <span th:text="${evento.eventRelacPac}"/></p>
             <p><strong>Paciente:</strong> <span th:text="${evento.nomePaciente}"/></p>
             <p><strong>Numero do Atendimento:</strong> <span th:text="${evento.numeroAtendimento}"/></p>
