Realizado alguns ajustes no HTML e comecei a fazer a parte de cadastro de usuarios

--- a/src/main/resources/templates/eventoForm.html
+++ b/src/main/resources/templates/eventoForm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org">
 <head>
-    <title>iEAD</title>
+    <title>Novo Evento</title>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <!-- Bootstrap CSS -->
@@ -53,7 +53,7 @@
 
 <header>
     <nav class="navbar navbar-light bg-light">
-        <a href="/"><span class="navbar-brand mb-0 h1" style="font-weight: bold;">IEAD</span></a>
+        <a href="/"><span class="navbar-brand mb-0 h1" style="font-weight: bold;">HBPS</span></a>
         <a href="/eventos" class="btn btn-secondary" role="button">Eventos</a>
     </nav>
 </header>
