--- a/src/main/resources/templates/gerenciarEventos.html
+++ b/src/main/resources/templates/gerenciarEventos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org">
 <head>
-  <title>iEAD</title>
+  <title>Graficos</title>
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
   <!-- Bootstrap CSS -->
