--- a/src/main/resources/templates/gerenciarEventos.html
+++ b/src/main/resources/templates/gerenciarEventos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org">
 <head>
-  <title>Graficos</title>
+  <title>Gerenial</title>
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
   <!-- Bootstrap CSS -->
@@ -15,7 +15,7 @@
 
 <header>
   <nav class="navbar navbar-light bg-light">
-    <span class="navbar-brand mb-0 h1" style="font-weight: bold;">IEAD</span>
+    <a href="/"><span class="navbar-brand mb-0 h1" style="font-weight: bold;">HBPS</span></a>
     <div class="ml-auto">
       <a href="/novoevento" class="btn btn-primary" role="button">Novo Evento</a>
       <a href="/eventos" class="btn btn-secondary" role="button">Eventos</a>
